--- a/03_bd-sql-tester-template/src/main/resources/com/example/bdsqltester/admin-view.fxml
+++ b/03_bd-sql-tester-template/src/main/resources/com/example/bdsqltester/admin-view.fxml
@@ -13,12 +13,19 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-
 <SplitPane dividerPositions="0.5" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bdsqltester.scenes.admin.AdminController">
    <items>
       <VBox alignment="TOP_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
          <children>
-            <Button mnemonicParsing="false" onAction="#onNewAssignmentClick" text="New Assignment" />
+            <HBox alignment="TOP_RIGHT" spacing="8.0">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#onLogoutClick" text="Logout" />
+                  <Button mnemonicParsing="false" onAction="#onNewAssignmentClick" text="New Assignment" />
+               </children>
+               <padding>
+                  <Insets right="8.0" />
+               </padding>
+            </HBox>
             <ListView fx:id="assignmentList" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
                <VBox.margin>
                   <Insets top="8.0" />
@@ -29,19 +36,19 @@
       <VBox prefHeight="200.0" prefWidth="100.0">
          <children>
             <GridPane>
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="132.0" minWidth="10.0" prefWidth="48.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="225.0" minWidth="10.0" prefWidth="225.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="132.0" minWidth="10.0" prefWidth="48.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="225.0" minWidth="10.0" prefWidth="225.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
                <children>
                   <Label maxHeight="1.7976931348623157E308" text="ID" />
-                  <TextField fx:id="nameField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="idField" editable="false" GridPane.columnIndex="1" />
                   <Label maxHeight="1.7976931348623157E308" text="Name" GridPane.rowIndex="1" />
-                  <TextField fx:id="idField" GridPane.columnIndex="1" />
+                  <TextField fx:id="nameField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                </children>
             </GridPane>
             <HBox prefWidth="200.0" spacing="8.0" />
@@ -66,6 +73,7 @@
                   <HBox HBox.hgrow="ALWAYS" />
                   <Button mnemonicParsing="false" onAction="#onTestButtonClick" text="Test" />
                   <Button mnemonicParsing="false" onAction="#onSaveClick" text="Save" />
+                  <Button mnemonicParsing="false" onAction="#onDeleteClick" text="Delete" />
                </children>
             </HBox>
          </children>
