--- a/03_bd-sql-tester-template/src/main/resources/com/example/bdsqltester/user-view.fxml
+++ b/03_bd-sql-tester-template/src/main/resources/com/example/bdsqltester/user-view.fxml
@@ -1,10 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bdsqltester.scenes.UserViewController">
-    <children>
-        <Label layoutX="50.0" layoutY="50.0" text="Selamat Datang di Halaman User!" />
-    </children>
-</AnchorPane>
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bdsqltester.scenes.UserViewController">
+    <top>
+        <Label text="Daftar Tugas" BorderPane.alignment="CENTER">
+            <padding>
+                <Insets bottom="10.0" top="10.0" />
+            </padding>
+        </Label>
+    </top>
+    <center>
+        <TableView fx:id="assignmentTableView" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+            <columns>
+                <TableColumn fx:id="idColumn" prefWidth="75.0" text="ID" />
+                <TableColumn fx:id="nameColumn" prefWidth="200.0" text="Nama Tugas" />
+                <TableColumn fx:id="nilaiSayaColumn" prefWidth="100.0" text="Nilai Saya">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="userGrade" />
+                    </cellValueFactory>
+                </TableColumn>
+                <TableColumn fx:id="actionColumn" prefWidth="120.0" text="Aksi" />
+            </columns>
+        </TableView>
+    </center>
+    <bottom>
+        <VBox alignment="CENTER_RIGHT" spacing="10.0" BorderPane.alignment="CENTER_RIGHT">
+            <padding>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+            </padding>
+            <Button mnemonicParsing="false" onAction="#handleSignOut" text="Keluar" />
+        </VBox>
+    </bottom>
+</BorderPane>
